# flickr-image-captioning

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  push_to_hub.py  pyproject.toml  requirements.docker.txt
api/: main.py  schemas.py
configs/: attention_gru.json  attention_gru_glove.json  attention_lstm.json  attention_lstm_glove.json  attention_lstm_hpo.json  baseline.json  baseline_gru.json  baseline_lstm.json
experiments/: hpo_summary.json
hf_release/: README.md
hf_space/: README.md  app.py  requirements.txt
models/: attention_gru_glove_history.json  attention_gru_history.json  attention_lstm_glove_history.json  attention_lstm_history.json  attention_lstm_hpo_history.json  baseline_gru_history.json  baseline_history.json  baseline_lstm_history.json
notebooks/: 01_eda.ipynb  03_error_analysis.ipynb
reports/: analysis_report.md  presentation.pptx
results/: metrics_attention_gru_beam5.json  metrics_attention_gru_glove_beam5.json  metrics_attention_lstm_beam5.json  metrics_attention_lstm_glove_beam5.json  metrics_baseline_gru_beam5.json  metrics_baseline_lstm_beam5.json  metrics_beam5.json  metrics_beam5_predictions.json  metrics_greedy.json  metrics_greedy_predictions.json  metrics_gru_beam5.json  metrics_gru_beam5_predictions.json  metrics_lstm_hpo_beam5.json  metrics_lstm_hpo_beam5_predictions.json
src/: attention.py  dataset.py  decoder.py  evaluate.py  hpo.py  inference.py  train.py  train_attention.py  utils.py  visualize.py  vocabulary.py
tests/: conftest.py  test_api.py  test_dataset.py  test_inference.py  (+1 more)
(+2 files in other folders)
